deleted all user and email stuff

--- a/app.json
+++ b/app.json
@@ -10,14 +10,6 @@
   		"description": "Node environment",
   		"value": "production"
   	},
-    "JWT_SECRET": {
-      "description": "A secret string to generate JWT tokens (REQUIRED)",
-      "value":""
-    },
-    "FROM_EMAIL": {
-      "description": "A *validated* from-email address to send emails from(REQUIRED)",
-      "value":""
-    }
   },
-  "addons": ["mongolab", "sendgrid:starter"]
+  "addons": ["mongolab"]
 }
