--- a/package.json
+++ b/package.json
@@ -43,7 +43,10 @@
     "redux-form": "^4.1.3",
     "redux-logger": "^2.6.1",
     "redux-promise": "^0.5.1",
+    "request": "^2.76.0",
     "sendgrid": "2.0.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "xml2js": "^0.4.17",
+    "xml2json": "^0.10.0"
   }
 }
