--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "start:dev": "nodemon ./bin/www",
     "build": "node node_modules/.bin/webpack",
     "dev": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js"
   },
