--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node ./bin/www",
     "start:dev": "nodemon ./bin/www",
     "build": "node node_modules/.bin/webpack",
-    "dev": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+    "dev": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot",
     "clear": "mongo dynamic-blog --eval \"db.dropDatabase()\""
   },
   "engines": {
@@ -28,9 +28,11 @@
     "bcrypt": "^0.8.5",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
+    "css-loader": "^0.25.0",
     "debug": "~2.2.0",
     "ejs": "^2.4.1",
     "express": "~4.13.1",
+    "file-loader": "^0.9.0",
     "jade": "~1.11.0",
     "jsonwebtoken": "^5.7.0",
     "lodash": "^3.10.1",
@@ -49,6 +51,8 @@
     "redux-promise": "^0.5.1",
     "request": "^2.76.0",
     "serve-favicon": "~2.3.0",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "xml2js": "^0.4.17",
     "xml2json": "^0.10.0"
   }
