--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "dependencies": {
     "async": "^1.5.2",
     "axios": "^0.9.0",
-    "babel-preset-stage-1": "^6.1.18",
+    "babel-polyfill": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
     "bcrypt": "^0.8.5",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
@@ -49,6 +50,7 @@
     "redux-form": "^4.1.3",
     "redux-logger": "^2.6.1",
     "redux-promise": "^0.5.1",
+    "redux-thunk": "^2.1.0",
     "request": "^2.76.0",
     "serve-favicon": "~2.3.0",
     "style-loader": "^0.13.1",
