--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ejs": "^2.4.1",
     "express": "~4.13.1",
     "file-loader": "^0.9.0",
+    "immutable": "^3.8.1",
     "jade": "~1.11.0",
     "jsonwebtoken": "^5.7.0",
     "lodash": "^3.10.1",
@@ -47,7 +48,6 @@
     "react-redux": "^4.0.0",
     "react-router": "^2.0.0-rc5",
     "redux": "^3.0.4",
-    "redux-form": "^4.1.3",
     "redux-logger": "^2.6.1",
     "redux-promise": "^0.5.1",
     "redux-thunk": "^2.1.0",
