--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "mongoose": "^4.4.6",
     "mongoose-timestamp": "^0.5.0",
     "morgan": "~1.6.1",
+    "normalize.css": "^5.0.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-html5video": "^1.2.12",
