--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-html5video": "^1.2.12",
+    "react-measure": "^1.4.2",
+    "react-measure-it": "^0.1.1",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.0-rc5",
     "redux": "^3.0.4",
@@ -56,6 +58,9 @@
     "request": "^2.76.0",
     "serve-favicon": "~2.3.0",
     "style-loader": "^0.13.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^2.4.0",
+    "underscore": "^1.8.3",
     "url-loader": "^0.5.7",
     "xml2js": "^0.4.17",
     "xml2json": "^0.10.0"
